--- a/src/components/WorldMap/worldmap.css
+++ b/src/components/WorldMap/worldmap.css
@@ -7,12 +7,13 @@ svg path {
   transition: transform 0.2s ease-in-out;
   z-index: 1;
   position: relative;
+  fill: var(--secondary-color);
 }
 svg path:hover {
   transform: scale(1.02);
   transition: transform 0.2s ease-in-out;
   z-index: 999;
-  fill: beige;
+  fill: var(--primary-color);
 }
 
 @keyframes slide-in {
@@ -27,25 +28,57 @@ svg path:hover {
 .world-map-container {
   display: flex;
   height: 100vh;
+  width: 100vw;
   position: relative;
-  margin-top: 2.5%;
   overflow: hidden;
 }
 
-.selected-city-div {
+.selected-country-div {
   position: absolute;
-  top: 0;
+  top: 2.5%;
   bottom: 0;
-  right: 0;
+  right: 2%;
 
   height: 95%;
-  width: 25%;
+  width: 20%;
   background-color: white;
   box-shadow: -4px 0px 10px rgba(0, 0, 0, 0.2);
   animation: slide-in 0.5s ease;
   border-radius: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
-.selected-city-title {
+.selected-country-content {
+  height: 55%;
+}
+.selected-country-title {
   padding: 16px;
+}
+
+.selected-country-img {
+  width: 100%;
+  height: 35%;
+  object-fit: cover;
+  border-radius: 25px 25px 0 0;
+}
+
+.selected-country-button {
+  width: 70%;
+  background-color: var(--primary-color);
+  color: white;
+  border: none;
+  border-radius: 25px;
+  padding: 16px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  font-weight: bold;
+  transition-duration: 0.2s;
+}
+
+.selected-country-button:hover {
+  cursor: pointer;
+  transform: scale(1.02);
+  font-weight: bold;
+  transition: transform 0.2s ease-in-out;
 }
