--- a/src/components/WorldMap/worldmap.css
+++ b/src/components/WorldMap/worldmap.css
@@ -1,15 +1,15 @@
-svg {
+.world-map-container svg {
   width: 90%;
   height: 90%;
 }
 
-svg path {
+.world-map-container svg path {
   transition: transform 0.2s ease-in-out;
   z-index: 1;
   position: relative;
   fill: var(--secondary-color);
 }
-svg path:hover {
+.world-map-container svg path:hover {
   transform: scale(1.02);
   transition: transform 0.2s ease-in-out;
   z-index: 999;
